Use exceptions for schema/arg parsing failures and simplify how those exceptions are created. Also clean up warnings, some formatting changes.