@@ -1,54 +1,44 @@
 package refactor;
 
-import java.text.ParseException;
-import java.util.*;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
+
+import static java.lang.Integer.parseInt;
 
 public class Args {
-    private String schema;
-    private String[] args;
-    private boolean valid = true;
-    private Set<Character> unexpectedArguments = new TreeSet<Character>();
-    private Map<Character, Boolean> booleanArgs =
-            new HashMap<Character, Boolean>();
-    private Map<Character, String> stringArgs = new HashMap<Character, String>();
-    private Map<Character, Integer> intArgs = new HashMap<Character, Integer>();
-    private Set<Character> argsFound = new HashSet<Character>();
+
+    private final String schema;
+    private final String[] args;
+    private final Map<Character, Boolean> booleanArgs = new HashMap<>();
+    private final Map<Character, String> stringArgs = new HashMap<>();
+    private final Map<Character, Integer> intArgs = new HashMap<>();
+    private final Set<Character> argsFound = new HashSet<>();
     private int currentArgument;
-    private char errorArgumentId = '\0';
-    private String errorParameter = "TILT";
-    private ErrorCode errorCode = ErrorCode.OK;
 
-    private enum ErrorCode {
-        OK, MISSING_STRING, MISSING_INTEGER, INVALID_INTEGER, UNEXPECTED_ARGUMENT}
-
-    public Args(String schema, String[] args) throws ParseException {
+    public Args(String schema, String[] args) throws ArgsException {
         this.schema = schema;
         this.args = args;
-        valid = parse();
+        parse();
     }
 
-    private boolean parse() throws ParseException {
-        if (schema.length() == 0 && args.length == 0)
-            return true;
+    private void parse() throws ArgsException {
+        if (schema.isEmpty() && args.length == 0) return;
         parseSchema();
-        try {
-            parseArguments();
-        } catch (ArgsException e) {
-        }
-        return valid;
+        parseArguments();
     }
 
-    private boolean parseSchema() throws ParseException {
+    private void parseSchema() throws ArgsException {
         for (String element : schema.split(",")) {
-            if (element.length() > 0) {
+            if (!element.isEmpty()) {
                 String trimmedElement = element.trim();
                 parseSchemaElement(trimmedElement);
             }
         }
-        return true;
     }
 
-    private void parseSchemaElement(String element) throws ParseException {
+    private void parseSchemaElement(String element) throws ArgsException {
         char elementId = element.charAt(0);
         String elementTail = element.substring(1);
         validateSchemaElementId(elementId);
@@ -59,16 +49,13 @@ public class Args {
         else if (isIntegerSchemaElement(elementTail)) {
             parseIntegerSchemaElement(elementId);
         } else {
-            throw new ParseException(
-                    String.format("Argument: %c has invalid format: %s.",
-                            elementId, elementTail), 0);
+            throw new ArgsException("Argument: %c has invalid format: %s.".formatted(elementId, elementTail));
         }
     }
 
-    private void validateSchemaElementId(char elementId) throws ParseException {
+    private void validateSchemaElementId(char elementId) throws ArgsException {
         if (!Character.isLetter(elementId)) {
-            throw new ParseException(
-                    "Bad character:" + elementId + "in Args format: " + schema, 0);
+            throw new ArgsException("Bad character: %c in Args format: %s".formatted(elementId, schema));
         }
     }
 
@@ -89,38 +76,37 @@ public class Args {
     }
 
     private boolean isBooleanSchemaElement(String elementTail) {
-        return elementTail.length() == 0;
+        return elementTail.isEmpty();
     }
 
     private boolean isIntegerSchemaElement(String elementTail) {
         return elementTail.equals("#");
     }
-    private boolean parseArguments() throws ArgsException {
-        for (currentArgument = 0; currentArgument < args.length; currentArgument++)
-        {
+
+    private void parseArguments() throws ArgsException {
+        for (currentArgument = 0; currentArgument < args.length; currentArgument++) {
             String arg = args[currentArgument];
             parseArgument(arg);
         }
-        return true;
     }
 
     private void parseArgument(String arg) throws ArgsException {
-        if (arg.startsWith("-"))
+        if (arg.startsWith("-")) {
             parseElements(arg);
+        }
     }
 
     private void parseElements(String arg) throws ArgsException {
-        for (int i = 1; i < arg.length(); i++)
+        for (int i = 1; i < arg.length(); i++) {
             parseElement(arg.charAt(i));
+        }
     }
 
     private void parseElement(char argChar) throws ArgsException {
-        if (setArgument(argChar))
+        if (setArgument(argChar)) {
             argsFound.add(argChar);
-        else {
-            unexpectedArguments.add(argChar);
-            errorCode = ErrorCode.UNEXPECTED_ARGUMENT;
-            valid = false;
+        } else {
+            throw new ArgsException("Argument -%c unexpected".formatted(argChar));
         }
     }
 
@@ -144,18 +130,11 @@ public class Args {
         String parameter = null;
         try {
             parameter = args[currentArgument];
-            intArgs.put(argChar, new Integer(parameter));
+            intArgs.put(argChar, parseInt(parameter));
         } catch (ArrayIndexOutOfBoundsException e) {
-            valid = false;
-            errorArgumentId = argChar;
-            errorCode = ErrorCode.MISSING_INTEGER;
-            throw new ArgsException();
+            throw new ArgsException("Could not find integer parameter for -%c.".formatted(argChar), e);
         } catch (NumberFormatException e) {
-            valid = false;
-            errorArgumentId = argChar;
-            errorParameter = parameter;
-            errorCode = ErrorCode.INVALID_INTEGER;
-            throw new ArgsException();
+            throw new ArgsException("Argument -%c expects an integer but was '%s'.".formatted(argChar, parameter), e);
         }
     }
 
@@ -164,10 +143,7 @@ public class Args {
         try {
             stringArgs.put(argChar, args[currentArgument]);
         } catch (ArrayIndexOutOfBoundsException e) {
-            valid = false;
-            errorArgumentId = argChar;
-            errorCode = ErrorCode.MISSING_STRING;
-            throw new ArgsException();
+            throw new ArgsException("Could not find string parameter for -%c.".formatted(argChar), e);
         }
     }
 
@@ -188,73 +164,22 @@ public class Args {
     }
 
     public String usage() {
-        if (schema.length() > 0)
-            return "-[" + schema + "]";
-        else
-            return "";
-    }
-
-    public String errorMessage() throws Exception {
-        switch (errorCode) {
-            case OK:
-                throw new Exception("TILT: Should not get here.");
-            case UNEXPECTED_ARGUMENT:
-                return unexpectedArgumentMessage();
-            case MISSING_STRING:
-                return String.format("Could not find string parameter for -%c.",
-                        errorArgumentId);
-            case INVALID_INTEGER:
-                return String.format("Argument -%c expects an integer but was '%s'.",
-                        errorArgumentId, errorParameter);
-            case MISSING_INTEGER:
-                return String.format("Could not find integer parameter for -%c.",
-                        errorArgumentId);
-        }
-        return "";
-    }
-
-    private String unexpectedArgumentMessage() {
-        StringBuffer message = new StringBuffer("Argument(s) -");
-        for (char c : unexpectedArguments) {
-            message.append(c);
-        }
-        message.append(" unexpected.");
-
-        return message.toString();
-    }
-
-    private boolean falseIfNull(Boolean b) {
-        return b != null && b;
-    }
-
-    private int zeroIfNull(Integer i) {
-        return i == null ? 0 : i;
-    }
-
-    private String blankIfNull(String s) {
-        return s == null ? "" : s;
+        return !schema.isEmpty() ? "-[" + schema + "]" : "";
     }
 
     public String getString(char arg) {
-        return blankIfNull(stringArgs.get(arg));
+        return stringArgs.getOrDefault(arg, "");
     }
 
     public int getInt(char arg) {
-        return zeroIfNull(intArgs.get(arg));
+        return intArgs.getOrDefault(arg, 0);
     }
 
     public boolean getBoolean(char arg) {
-        return falseIfNull(booleanArgs.get(arg));
+        return booleanArgs.getOrDefault(arg, false);
     }
 
     public boolean has(char arg) {
         return argsFound.contains(arg);
-    }
-
-    public boolean isValid() {
-        return valid;
-    }
-
-    private class ArgsException extends Exception {
     }
 }
